# smoothe

./: .gitignore  .guide.yaml  AGENTS.md  CONFIGURATION.md  Cargo.toml  LICENSE.md  README.md
.cargo/: config.toml
.github/workflows/: rust.yml
.todo/: add-json-parser-output-review.md
behavior/: README.md
openspec/: project.md
openspec/changes/add-behavioral-fixture-suite/: design.md  proposal.md  tasks.md
openspec/changes/add-configuration-file/: proposal.md
openspec/changes/add-full-partial-support/: proposal.md  tasks.md
openspec/changes/add-glob-support/: design.md  proposal.md  tasks.md
openspec/changes/add-json-parser-output/: design.md  proposal.md
openspec/changes/add-mustache-core-parser/: design.md  proposal.md
openspec/changes/add-mustache-parse/: design.md  tasks.md
openspec/changes/add-mustache-parser-inputs/: design.md  proposal.md  tasks.md
openspec/changes/add-variable-checks/: design.md  proposal.md  tasks.md
openspec/changes/create-cli/: design.md  proposal.md  tasks.md
src/: behave_runner.rs  check_events.rs  cli.rs  config.rs  content.rs  context_schema.rs  lambda.rs  lib.rs  main.rs  source_prepare.rs
src/commands/: check.rs  mod.rs  parse.rs
src/parser/: ast.rs  diagnostic.rs  input.rs  mod.rs  source.rs
tests/: behave_runner_tests.rs  check_events_tests.rs  config_tests.rs  context_schema_tests.rs  diagnostic_tests.rs  lambda_tests.rs
tests/cli/: mod.rs
tests/content/: mod.rs
tests/fixtures/: parse-invalid.mustache  parse-valid.mustache  parse-warning.mustache  smoothe-check.toml
tests/parser/: mod.rs
(+150 files in other folders)
