[package]
name = "smoothe"
version = "0.2.0pre1"
edition = "2024"
authors = ["David L Nugent <davidn@uniquode.io>"]
description = "A command-line companion for checking and inspecting Mustache templates."
license = "MIT"
repository = "https://github.com/deeprave/smoothe"
readme = "README.md"
keywords = ["mustache", "templates", "lint", "cli", "parser"]
categories = ["command-line-utilities", "development-tools", "template-engine"]

[dependencies]
clap = { version = "4.5.49", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
toml = "0.9.8"
